# 00_cedrus

./: .bandit  .bandit.yml  .blackignore  .codacy.yml  .dockerignore  .env.example  .env.test  .flake8  .gitignore  .gitleaks.toml  .markdownlint.json  .prospector.yaml  .pylintrc  .remarkignore  .semgrepignore  .stylelintrc.json  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  README.md  conftest.py  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  list_apps.py  manage.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run_tests.sh  run_tests_with_coverage.sh  trivy.yaml
.agents/: Internationalization.md  accessibility.md  architecture.md  branding.md  business_analyst.md  compliance.md  datamodeling.md  devops.md  docs.md  engineer.md  financial_commercial.md  gdpr_and_data_protection.md  integration.md  legal_and_contracts.md  orchestrator.md  performance_testing.md  product_owner.md  project_manager.md  qa.md  release_manager.md  scrum_master.md  security.md  support.md  training_enablement.md  uiux.md
.agents/accreditation/: accreditation_assessor.md  anab.md  cb_operations.md  dakkS_esyd.md  ea.md  iaf.md  lead_auditor_competence.md  multisite_sampling.md  remote_audit.md  ukas.md
.agents/advisory/: cco.md  cfo.md  cio.md  ciso.md  cmo.md  cro.md  customer_council.md  enisa.md  esg.md  key_account.md  nist_csf.md  ot_cyber.md  regulatory_eu.md  strategy_cso.md
.agents/sessions/: plan.md
.agents/standards/: iso14001.md  iso17021.md  iso20000.md  iso22301.md  iso27001.md  iso27002.md  iso27005.md  iso27017.md  iso27018.md  iso27019.md  iso27035.md  iso31000.md  iso31010.md  iso31030.md  iso37001.md  iso37301.md  iso45001.md  iso50001.md  iso55001.md  iso9001.md
.github/: PULL_REQUEST_TEMPLATE.md  SECRETS.md  dependabot.yml
.github/workflows/: bandit.yml  branch-protection.yml  ci.yml  codacy.yml  code-quality.yml  codeql.yml  deploy-check.yml  ethicalcheck.yml  ossar.yml  rollback.yml  security-scan.yml  security-schedule.yml  snyk-security.yml  verify-secrets.yml
.governance/: CICD_PIPELINE_DAY3-4_REPORT.md  DOCKER_DAY5_REPORT.md  ENTERPRISE_EXCELLENCE_30DAY_PLAN.md  MCP_SETUP_GUIDE.md  README.md  SECURITY_HARDENING_DAY1-2_REPORT.md  board_meeting_001_external_audit_module.md  board_meeting_002_production_readiness.md  data_model_design_v1.md  manual_qa_checklist.md  phase_1_completion_report.md  phase_2_completion_report.md  priority_2_completion_report.md  priority_2_completion_summary.md  project_status_update.md  qa_test_report.md  ram_raci.md  security_testing.md  sprint_6_completion_report.md  test_execution_guide.md  test_plan.md
_archive/audits/: admin.py  apps.py  complaint_forms.py  documentation_forms.py  finding_forms.py  forms.py  models.py  program_forms.py  team_forms.py  test_data_validation.py  test_edge_cases.py  test_findings_crud.py  test_phase2.py  test_phase2a.py  test_phase3.py  test_priority2.py  test_program.py  test_services.py  test_sprint10_edge_cases.py  test_sprint9.py  test_validation.py  test_views.py  test_views_complaints.py  test_workflows.py  urls.py  views.py  views_complaints.py  views_program.py  workflows.py
accounts/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auditorcompetenceevaluation_auditortrainingrecord_and_more.py
audit_management/: models.py  urls.py
audit_management/adapters/: models.py
audit_management/api/: rest_urls.py  serializers.py  viewsets.py
audit_management/application/: schemas.py  services.py
audit_management/forms/: documentation_forms.py  file_forms.py  finding_forms.py  forms.py  program_forms.py  recommendation_forms.py  team_forms.py
audit_management/migrations/: 0001_initial.py
audit_management/tests/: test_api.py  test_views.py
audits/: complaint_forms.py  documentation_forms.py  file_forms.py  finding_forms.py  forms.py  models.py  program_forms.py  recommendation_forms.py  team_forms.py  test_audit_workflow.py  test_data_validation.py  test_data_validation.py.bak  test_edge_cases.py  test_events.py  test_evidence_upload.py  test_findings_crud.py  test_forms.py  test_integration.py  test_permissions.py  test_phase2.py  test_phase2_wiring.py  test_phase2a.py  test_phase3.py  test_phase3.py.bak  test_priority2.py  test_priority2.py.bak  test_program.py  test_services.py  test_sprint10_edge_cases.py  test_sprint8.py  test_sprint9.py  test_validation.py  test_views.py  test_views_complaints.py  test_views_program.py  test_workflows.py  test_workflows.py.bak  tests.py  urls.py  views.py  (+3 more)
audits/migrations/: 0005_add_performance_indexes.py  (+4 more)
cedrus/: asgi.py  celery.py  settings.py  settings_production.py  urls.py  wsgi.py
certification/: models.py  urls.py
core/: admin.py  apps.py  forms.py  health.py  middleware.py  models.py  test_utils.py  tests.py  urls.py  views.py
docs/: API_REFERENCE.md  ARCHITECTURAL_PATTERNS.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_VISION.md  BACKLOG.md  BRAND_GUIDELINES.md  BRAND_QUICK_REFERENCE.md  CARBON_MIGRATION.md  CODEQL_SETUP.md  CODE_QUALITY.md  CODE_STANDARDS.md  DEPLOYMENT.md  DOCSTRING_COMPLETION_REPORT.md  IMPLEMENTATION_PROGRESS.md  MODELS.md  MVP_SCOPE.md  PERFORMANCE_AUDIT_REPORT.md  PHASE_2_QUICK_REFERENCE.md  PHASE_3_PLAN.md  PLATFORM_GAP_ANALYSIS.md  PRE_PRODUCTION_EXCELLENCE_REVIEW.md  PRIVATE_ENV_SECRETS_ELI5.md  PRODUCT_INDEX.md  PRODUCT_REQUIREMENTS.md  README.md  REFACTORING_PROPOSAL.md  SECURITY_AUDIT_REPORT.md  SECURITY_REVIEW.md  SPRINT_10_SUMMARY.md  SPRINT_7_DAY1_REPORT.md  SPRINT_7_PLAN.md  SPRINT_7_SUMMARY.md  SPRINT_8_PLAN.md  SPRINT_8_STATUS.md  SPRINT_8_SUMMARY.md  TASK_8.1_CHECKLIST.md  TASK_8.1_COMPLETION_REPORT.md  TASK_BOARD.md  TEST_FIXING_STATUS.md  (+3 more)
identity/: apps.py  models.py
reporting/: admin.py  models.py  tests.py  urls.py  views.py
reports/: bandit-full-report.json
scripts/: check_encoding.py
templates/: base.html
trunk/: tests.py
(+217 files in other folders)
