[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "00_cedrus"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.1",
    "celery>=5.3.6",
    "django>=6.0.2",
    "django-axes>=8.3.0",
    "django-csp>=4.0",
    "django-environ>=0.12.0",
    "django-redis>=6.0.0",
    "django-storages>=1.14.6",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.29.0",
    "gunicorn>=23.0.0",
    "nltk>=3.9.2",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.6.1",
    "qrcode>=8.2",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "sentry-sdk>=2.47.0",
    "tenacity>=9.1.2",
    "urllib3>=2.6.3",
    "weasyprint>=68.0",
    "whitenoise>=6.11.0",
]

[tool.setuptools]
packages = ["cedrus", "identity", "audit_management", "core", "trunk", "reporting"]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "**/migrations/*",
    "uv.lock",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "S",  # flake8-bandit
    "DJ", # flake8-django
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["S101", "S105", "S106"]
"**/tests.py" = ["S101", "S105", "S106"]
"**/settings*.py" = ["S101", "S105", "S106"]
"**/migrations/*" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["cedrus", "identity", "audit_management", "core", "trunk", "reporting"]

[tool.coverage.run]
branch = true
source = ["identity", "audit_management", "core", "trunk", "reporting", "cedrus"]
omit = [
    "manage.py",
    "*/asgi.py",
    "*/wsgi.py",
    "*/settings_production.py",
    "*/migrations/*",
    "*/management/*",
    "*/test_*.py",
    "*/tests.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 75
show_missing = true
skip_empty = true

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = [
    "weasyprint.*",
    "environ.*",
    "debug_toolbar.*"
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "cedrus.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "cedrus.settings"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
norecursedirs = "_archive .git .venv venv node_modules"
addopts = [
    "--reuse-db",
    "--tb=short",
    "--maxfail=5",
    "--strict-markers",
    "-p", "no:warnings",
    "--verbose",
    "--showlocals",
    "--durations=10",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "security: marks tests as security tests",
    "performance: marks tests as performance tests",
    "smoke: marks tests as smoke tests (quick validation)",
    "django_db: marks tests that require database access",
]
minversion = "3.13"
testpaths = [
    "audits",
    "core/tests",
    "identity/tests",
    "reporting",
    "trunk/tests",
    "trunk/workflows/tests",
    "audit_management/tests",
    "certification/tests",
    "cedrus/tests",
]
console_output_style = "progress"
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "logs/pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
    "htmlcov",
]

[tool.bandit.assert_used]
skips = [
    "**/test_*.py",
    "**/*_test.py",
    "**/tests/**",
    "conftest.py",
]

[dependency-groups]
dev = [
    "axe-playwright-python>=0.1.7",
    "coverage>=7.12.0",
    "django-debug-toolbar>=6.1.0",
    "django-stubs>=5.2.8",
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "pytest-playwright>=0.7.2",
    "ruff>=0.14.7",
    "bandit>=1.7.8",
    "semgrep>=1.52.0",
    "rustworkx>=0.17.1",
    "pip-audit>=2.9.0",
    "mcp>=1.23.0",
]
